debuggins, some pages wont load

--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
-
 {
+  "name": "book-club",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
@@ -17,5 +21,10 @@
     "handlebars": "^4.7.6",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
+  },
+  "devDependencies": {
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "prettier": "^2.1.2"
   }
 }
